--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,1 +1,40 @@
 
+name: Generate Metrics
+
+on:
+  schedule:
+    - cron: "0 0 * * *" # Runs daily
+  workflow_dispatch: # Allows manual trigger
+
+jobs:
+  metrics:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: Generate Metrics
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.GH_TOKEN }}
+          user: devdnv
+          template: classic
+          plugins: activity, languages, stars
+          output: ./metrics.svg
+
+      - name: Update README
+        run: |
+          sed -i '/<!--START_SECTION:metrics-->/, /<!--END_SECTION:metrics-->/c\<!--START_SECTION:metrics-->\n![](metrics.svg)\n<!--END_SECTION:metrics-->' README.md
+
+      - name: Commit and Push Changes
+        run: |
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git add README.md
+          git commit -m "Update metrics in README" || echo "No changes to commit"
+          git push
