--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,10 +1,9 @@
-
 name: Generate Metrics
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs daily
-  workflow_dispatch: # Allows manual trigger
+    - cron: "0 0 * * *"  # Runs daily at midnight UTC
+  workflow_dispatch:       # Allows manual triggering from the Actions tab
 
 jobs:
   metrics:
@@ -22,7 +21,7 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.GH_TOKEN }}
-          user: devdnv
+          user: Devdnv
           template: classic
           plugins: activity, languages, stars
           output: ./metrics.svg
