--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -2,8 +2,8 @@ name: Metrics
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs daily
-  workflow_dispatch: # Allows manual trigger
+    - cron: "0 0 * * *"  # Runs daily at midnight UTC
+  workflow_dispatch:       # Allows manual triggering from the Actions tab
 
 jobs:
   metrics:
@@ -20,8 +20,20 @@ jobs:
       - name: Generate Metrics
         uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.METRICS_TOKEN }}
           user: devdnv
           template: classic
           plugins: activity, languages, stars
-          readme: true # Automatically updates README
+          output: ./metrics.svg
+
+      - name: Update README
+        run: |
+          sed -i '/<!--START_SECTION:metrics-->/, /<!--END_SECTION:metrics-->/c\<!--START_SECTION:metrics-->\n![](metrics.svg)\n<!--END_SECTION:metrics-->' README.md
+
+      - name: Commit and Push Changes
+        run: |
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git add README.md
+          git commit -m "Update metrics in README" || echo "No changes to commit"
+          git push
