--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: 16
 
-      - name: Generate Metrics
+      - name: Metrics
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
